# Testes-ESP-IDF

./: CMakeLists.txt  platformio.ini  sdkconfig.lolin_s2_mini  sdkconfig.lolin_s2_mini.old
src/: CMakeLists.txt  main.c
